# FFMpegWrapper

./: CMakeLists.txt
src/: CMakeLists.txt  ChangeFileFormat.cpp  ConcatCutMuxSplit.cpp  EncodeContent.cpp  FFMpegEncodingParameters.cpp  FFMpegEncodingParameters.h  FFMpegEngine.cpp  FFMpegEngine.h  FFMpegFilters.cpp  FFMpegFilters.h  FFMpegWrapper.cpp  FFMpegWrapper.h  FFmpegEngine.cpp  FFmpegEngine.h  Frames.cpp  Incrontab.cpp  IntroOutroOverlay.cpp  LiveGrid.cpp  LiveProxy.cpp  LiveRecorder.cpp  LocalInputDevices.cpp  MediaInfo.cpp  Monitoring.cpp  Overlay.cpp  PictureInPicture.cpp  SilentAudio.cpp  SlideShow.cpp  StreamingToFile.cpp  VideoSpeed.cpp  Youtube.cpp
